# libfuzzer_minimal_example

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
